# OpenWear

./: .gitignore  CMakeLists.txt  OpenWear.sln  README.md  clean.bat  run.sh
MRCVGL/: CMakeLists.txt  MRCVGL.cpp  MRCVGL.vcxproj
OpenWear/: 3DObject.cpp  3DObject.h  CMakeLists.txt  Glasses.cpp  Glasses.h  OpenWear.rc  OpenWear.vcxproj  glm.c  glm.cpp  glm.h  openwear.cpp  resource.h
OpenWear/model/: glasses.obj.mtl
sdm/: CMakeLists.txt  sdm.vcxproj  test_model.cpp
sdm/include/: feature_descriptor.h  helper.h  hog.h  ldmarkmodel.cpp  ldmarkmodel.h  modelcfg.h
